--- a/app/views/action_auth/identity/password_resets/edit.html.erb
+++ b/app/views/action_auth/identity/password_resets/edit.html.erb
@@ -1,8 +1,6 @@
-<p style="color: red"><%= alert %></p>
+<h1>Reset your password</h1>
 
-<h1>Change your password</h1>
-
-<%= form_with(url: password_path, method: :patch) do |form| %>
+<%= form_with(url: identity_password_reset_path, method: :patch) do |form| %>
   <% if @user.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -15,14 +13,11 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :password_challenge, style: "display: block" %>
-    <%= form.password_field :password_challenge, required: true, autofocus: true, autocomplete: "current-password" %>
-  </div>
+  <%= form.hidden_field :sid, value: params[:sid] %>
 
   <div>
     <%= form.label :password, "New password", style: "display: block" %>
-    <%= form.password_field :password, required: true, autocomplete: "new-password" %>
+    <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password" %>
     <div>12 characters minimum.</div>
   </div>
 
@@ -35,9 +30,3 @@
     <%= form.submit "Save changes" %>
   </div>
 <% end %>
-
-<br>
-
-<div>
-  <%= link_to "Back", main_app.root_path %>
-</div>
