--- a/app/views/action_auth/identity/emails/edit.html.erb
+++ b/app/views/action_auth/identity/emails/edit.html.erb
@@ -1,18 +1,21 @@
+
+<% if user_signed_in? && Current.user.verified? %>
+  <% header_text = "Change Your Email" %>
+  <% label_text = "New email" %>
+  <% button_text = "Save changes" %>
+<% else %>
+  <% header_text = "Verify Your Email" %>
+  <% label_text = "Email" %>
+  <% button_text = "Send verification email" %>
+<% end %>
+<h1><%= header_text %></h1>
+
 <p style="color: red"><%= alert %></p>
 
-<% if ActionAuth::Current.user.verified? %>
-  <h1>Change your email</h1>
-<% else %>
-  <h1>Verify your email</h1>
-  <p>We sent a verification email to the address below. Check that email and follow those instructions to confirm it's your email address.</p>
-  <p><%= button_to "Re-send verification email", identity_email_verification_path %></p>
-<% end %>
-
 <%= form_with(url: identity_email_path, method: :patch) do |form| %>
-  <% if @user.errors.any? %>
+  <% if @user&.errors&.any? %>
     <div style="color: red">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
       <ul>
         <% @user.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -21,23 +24,23 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :email, "New email", style: "display: block" %>
+  <div class="mb-3">
+    <%= form.label :email, label_text, style: "display: block" %>
     <%= form.email_field :email, required: true, autofocus: true %>
   </div>
 
-  <div>
-    <%= form.label :password_challenge, style: "display: block" %>
-    <%= form.password_field :password_challenge, required: true, autocomplete: "current-password" %>
-  </div>
+  <div class="mb-3">
+    <% if user_signed_in? && Current.user.verified? %>
+      <%= form.submit button_text, class: "btn btn-primary" %>
+    <% else %>
+      <%= button_to button_text, identity_email_verification_path, class: "btn btn-primary" %>
+    <% end %>
 
-  <div>
-    <%= form.submit "Save changes" %>
   </div>
 <% end %>
 
-<br>
-
-<div>
-  <%= link_to "Back", main_app.root_path %>
+<div class="mb-3">
+  <%= link_to "Sign In", sign_in_path %> |
+  <%= link_to "Sign Up", sign_up_path %> |
+  <%= link_to "Reset Password", new_identity_password_reset_path %>
 </div>
