--- a/app/views/action_auth/registrations/new.html.erb
+++ b/app/views/action_auth/registrations/new.html.erb
@@ -13,23 +13,29 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="mb-3">
     <%= form.label :email, style: "display: block" %>
     <%= form.email_field :email, value: @user.email, required: true, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div>
+  <div class="mb-3">
     <%= form.label :password, style: "display: block" %>
     <%= form.password_field :password, required: true, autocomplete: "new-password" %>
     <div>12 characters minimum.</div>
   </div>
 
-  <div>
+  <div class="mb-3">
     <%= form.label :password_confirmation, style: "display: block" %>
     <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password" %>
   </div>
 
-  <div>
-    <%= form.submit "Sign up" %>
+  <div class="mb-3">
+    <%= form.submit "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<div class="mb-3">
+  <%= link_to "Sign In", sign_in_path %> |
+  <%= link_to "Reset Password", new_identity_password_reset_path %> |
+  <%= link_to "Verify Email", identity_email_verification_path %>
+</div>
