--- a/app/views/layouts/action_auth/application.html.erb
+++ b/app/views/layouts/action_auth/application.html.erb
@@ -7,9 +7,9 @@
 
   <%= stylesheet_link_tag    "action_auth/application", media: "all" %>
 </head>
-<body>
-
-<%= yield %>
-
+<body class="bg-light">
+  <div class="container bg-white border pb-3">
+    <%= yield %>
+  </div>
 </body>
 </html>
