--- a/app/views/layouts/action_auth/application-full-width.html.erb
+++ b/app/views/layouts/action_auth/application-full-width.html.erb
@@ -7,7 +7,7 @@
   <%= stylesheet_link_tag "action_auth/application", media: "all" %>
 </head>
 <body class="bg-light">
-  <div class="container bg-white border pb-3">
+  <div class="container-fluid bg-white border pb-3">
     <%= yield %>
   </div>
 </body>
