--- a/app/views/layouts/action_auth/application-full-width.html.erb
+++ b/app/views/layouts/action_auth/application-full-width.html.erb
@@ -5,6 +5,11 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "action_auth/application", media: "all" %>
+  <%= javascript_include_tag "action_auth/application", "data-turbo-track": "reload", type: "module" %>
+  <% if ActionAuth.configuration.webauthn_enabled? %>
+    <%= tag :meta, name: :webauthn_auth_url, content: action_auth.webauthn_credential_authentications_url %>
+    <%= tag :meta, name: :webauthn_cred_url, content: action_auth.webauthn_credentials_url %>
+  <% end %>
 </head>
 <body class="bg-light">
   <div class="container-fluid bg-white border pb-3">
