--- a/app/views/action_auth/webauthn_credential_authentications/new.html.erb
+++ b/app/views/action_auth/webauthn_credential_authentications/new.html.erb
@@ -1,13 +1,9 @@
 <h2 class="">Use one of your security keys to sign in</h2>
 
-<%= form_with scope: :webauthn_credential_authentication,
-  url: options_for_webauthn_credential_authentications_path,
+<%= content_tag :div,
   id: "webauthn_credential_form",
-  data: { controller: "credential-authenticator", action: "ajax:success->credential-authenticator#verifyKey" } do |form| %>
-
-  <div class="mb-3">
-    <%= form.submit "Use Security Key", class: "btn btn-primary" %>
-  </div>
+  data: { controller: "credential-authenticator",
+  "credential-authenticator-options-value": @options } do %>
 
   <div class="mb-3">
     If it's an USB key be sure to insert it and, if necessary, tap it.
