--- a/app/assets/stylesheets/action_auth/application.css
+++ b/app/assets/stylesheets/action_auth/application.css
@@ -154,3 +154,7 @@ input[type="password"] {
 .action-auth--table td {
   transition: background-color 0.3s;
 }
+
+.action-auth--text-center {
+  text-align: center !important;
+}
