--- a/app/views/layouts/action_auth/application.html.erb
+++ b/app/views/layouts/action_auth/application.html.erb
@@ -6,10 +6,18 @@
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "action_auth/application", media: "all" %>
   <%= javascript_include_tag "action_auth/application", "data-turbo-track": "reload", type: "module" %>
+  <% if ActionAuth.configuration.webauthn_enabled? %>
+    <%= tag :meta, name: :webauthn_auth_url, content: action_auth.webauthn_credential_authentications_url %>
+    <%= tag :meta, name: :webauthn_cred_url, content: action_auth.webauthn_credentials_url %>
+    <%= tag :meta, name: :webauthn_redirect_url, content: action_auth.sessions_url %>
+  <% end %>
 </head>
 <body class="bg-light">
   <div class="container bg-white border pb-3">
     <%= yield %>
+  </div>
+  <div class="action-auth--text-center">
+    <%= yield(:cancel_path) %>
   </div>
 </body>
 </html>
