- Responsive viewport by default - Removed full-width layout - Set @action_auth_wide if you want to use the full-width layout - Only show "Verify Email" if the feature is enabled

--- a/app/views/action_auth/registrations/new.html.erb
+++ b/app/views/action_auth/registrations/new.html.erb
@@ -36,6 +36,8 @@
 
 <div class="mb-3">
   <%= link_to "Sign In", sign_in_path %> |
-  <%= link_to "Reset Password", new_identity_password_reset_path %> |
-  <%= link_to "Verify Email", identity_email_verification_path %>
+  <%= link_to "Reset Password", new_identity_password_reset_path %>
+  <% if ActionAuth.configuration.verify_email_on_sign_in %>
+    | <%= link_to "Verify Email", identity_email_verification_path %>
+  <% end %>
 </div>
