--- a/app/views/action_auth/identity/password_resets/new.html.erb
+++ b/app/views/action_auth/identity/password_resets/new.html.erb
@@ -13,7 +13,9 @@
 <% end %>
 
 <div class="mb-3">
-  <%= link_to "Sign In", sign_in_path %> |
-  <%= link_to "Sign Up", sign_up_path %> |
-  <%= link_to "Verify Email", identity_email_verification_path %>
+  <%= link_to "Sign In", sign_in_path %>
+  | <%= link_to "Sign Up", sign_up_path %>
+  <% if ActionAuth.configuration.verify_email_on_sign_in %>
+    | <%= link_to "Verify Email", identity_email_verification_path %>
+  <% end %>
 </div>
