--- a/app/views/layouts/action_auth/application.html.erb
+++ b/app/views/layouts/action_auth/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Action Auth</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "action_auth/application", media: "all" %>
@@ -13,7 +14,7 @@
   <% end %>
 </head>
 <body class="bg-light">
-  <div class="container bg-white border pb-3">
+  <div class="<%= defined?(@action_auth_wide) ? 'container-fluid' : 'container' %> bg-white border pb-3">
     <%= yield %>
   </div>
   <div class="action-auth--text-center">
