--- a/app/assets/stylesheets/action_auth/application.css
+++ b/app/assets/stylesheets/action_auth/application.css
@@ -36,6 +36,7 @@ body {
     margin-right: 5px;
   }
 }
+
 .container-fluid {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -76,6 +77,11 @@ input[type="password"] {
 
 .mb-3 {
   margin-bottom: 1rem !important;
+}
+
+.mx-3 {
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
 }
 
 .btn {
