--- a/app/assets/stylesheets/action_auth/application.css
+++ b/app/assets/stylesheets/action_auth/application.css
@@ -54,6 +54,8 @@ body {
 
 input[type="text"],
 input[type="email"],
+input[type="number"],
+input[type="tel"],
 input[type="password"] {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -186,6 +188,8 @@ input[type="password"] {
 
   input[type="text"],
   input[type="email"],
+  input[type="number"],
+  input[type="tel"],
   input[type="password"] {
     color: #d5c4a1;
     background-color: #282828;
