--- a/app/views/action_auth/registrations/new.html.erb
+++ b/app/views/action_auth/registrations/new.html.erb
@@ -39,6 +39,9 @@
   <% if ActionAuth.configuration.magic_link_enabled? %>
     <%= link_to "Magic Link", new_magics_requests_path %> |
   <% end %>
+  <% if ActionAuth.configuration.sms_auth_enabled? %>
+    <%= link_to "SMS Auth", new_sms_auths_requests_path %> |
+  <% end %>
   <% if ActionAuth.configuration.passkey_only? %>
     <%= link_to "Passkey", new_sessions_passkey_path %> |
   <% end %>
